# VoiceBridge_Realtime_App

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_TR.md  SECURITY.md  bandit-report.json  celery_app.py  config.py  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.render.yml  env.example  install_dependencies.py  main.py  package.json  pyproject.toml  pytest.ini  quick-start.bat  render.yaml  requirements-ci.txt  requirements-minimal.txt  requirements.txt  setup.cfg  setup.py  simple_main.py  simple_main_with_db.py  start-backend.bat  start-backend.sh  start-frontend.bat  start-render.sh  start_mlflow.py  tatus --porcelain  version.py
.github/workflows/: ci.yml  release.yml
analytics/: spark_simulator.py
cloud/: cloud_storage_simulator.py
deployment/docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  commands.md  configuration.md  deployment.md  ml_performance.md
docs/images/: architecture.md
docs/monitoring/: grafana-dashboard.json
examples/: simple_main_ml.py  simple_main_updated.py  test_setup.py
frontend/: .eslintrc.js  .prettierignore  .prettierrc  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
monitoring/: README.md
monitoring/grafana/: README.md
monitoring/prometheus/: prometheus.yml  voicebridge_rules.yml
postman/: README.md  VoiceBridge_API_Collection.json  VoiceBridge_Development_Environment.json  VoiceBridge_Production_Environment.json  VoiceBridge_Testing_Environment.json
postman/scripts/: setup_postman.bat  setup_postman.sh
postman/test_scripts/: run_tests.js
proto/: README.md  __init__.py  voicebridge.proto  voicebridge_pb2.py  voicebridge_pb2_grpc.py
scripts/: README.md  check_errors.py  create_release.py  deploy.sh  generate_proto.py  health_check.bat  local_ci.py  performance_monitor.py  quick_test.py  run_local_ci.bat  run_local_ci.sh  setup_ci.bat  setup_ci.py  setup_kafka.bat  setup_mlflow.bat  setup_mysql.py  setup_precommit.bat  setup_precommit.sh  setup_production.bat  setup_redis.bat  start-frontend.sh  start_all_services.bat  test_ci_docker.bat  test_ci_setup.py  test_production.py
src/: __init__.py
src/database/: data_service.py  mongodb_models.py  mysql_models.py
src/middleware/: security_middleware.py
src/routes/: auth_routes.py  monitoring_routes.py  realtime_routes.py
src/services/: audio_preprocessing_service.py  audio_processor.py  auth_service.py  encryption_service.py  grpc_service.py  kafka_consumer.py  kafka_producer.py  kafka_stream_service.py  ml_transcription_service.py  mlflow_service.py  model_monitoring_service.py  openai_whisper_service.py  prometheus_service.py  rate_limiting_service.py  realtime_streaming_service.py  secure_storage_service.py  wandb_service.py  wav2vec_service.py  whisper_service.py
src/services/ml/: __init__.py  (+3 more)
src/tasks/: modular_tasks.py  transcription_tasks.py
tests/: README.md  conftest.py  test_api.py  test_data_processing_systems.py.skip  test_database_integration.py.skip  test_fixes.py  test_integration.py  test_ml_models.py  test_ml_models.py.skip  test_monitoring.py  test_mysql_passwords.py  test_realtime.py  test_security.py  test_simple_api.py  test_simple_startup.py  test_websocket_stream.py
wandb/run-20250910_121316-isz8w090/: run-isz8w090.wandb
wandb/run-20250910_121418-fsfqto3m/: run-fsfqto3m.wandb
wandb/run-20250910_121443-ibprup16/: run-ibprup16.wandb
wandb/run-20250910_121449-oy72pmm0/: run-oy72pmm0.wandb
wandb/run-20250910_121512-z1d68lcd/: run-z1d68lcd.wandb
wandb/run-20250910_121557-a1f0nmt3/: run-a1f0nmt3.wandb
wandb/run-20250910_122401-o1f95swn/: run-o1f95swn.wandb
wandb/run-20250910_122917-nisclufp/: run-nisclufp.wandb
wandb/run-20250910_164824-72lnt8bs/: run-72lnt8bs.wandb
wandb/run-20250910_165059-089imwn1/: run-089imwn1.wandb
wandb/run-20250910_165142-7wey8q2q/: run-7wey8q2q.wandb
(+53 files in other folders)
